Update to 1.18 and cleanup